Bug 130280 - konqueror crashed when previewing a kwrite edited calendar file.
Summary: konqueror crashed when previewing a kwrite edited calendar file.
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.5
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 135566 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-07-05 09:53 UTC by Raúl
Modified: 2006-12-22 23:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace of the crash (6.01 KB, text/plain)
2006-07-05 10:12 UTC, Raúl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raúl 2006-07-05 09:53:22 UTC
Version:           3.5 (using KDE 3.5.3, Debian Package 4:3.5.3-1 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.16-p4s

I manually edited a calendar(.ics) file with kwrite, saved it and then I tried to preview it inside konqueror with a double click.

This usually works, but this time I have the attached backtrace.
Comment 1 Raúl 2006-07-05 10:12:59 UTC
Created attachment 16889 [details]
backtrace of the crash

Maybe this is related to #119435. Because I still have updated to the version
where it is solved.
Comment 2 Bram Schoenmakers 2006-07-06 18:54:24 UTC
It would be interesting if you'd specify what you changed exactly.
Comment 3 Raúl 2006-07-07 10:56:14 UTC
I did some simple changes on the file. It was a calendar (.ics) file, more exactly a karm data file and I change the duration of some task and maybe the starting or endind time of some taks.

After that I tried the preview and the had the crash.

I thought this could be related to the kdirwatch/inode problem in that bug, becuase altough it should be solve in the kde version I have, I've find that it is not. (Debian bug #368504).
Comment 4 Reinhold Kainhofer 2006-11-02 19:18:51 UTC
Reassigning all KOrganizer bug reports and wishes to the newly created 
korganizer-devel mailing list.
Comment 5 Bram Schoenmakers 2006-12-22 23:36:40 UTC
*** Bug 135566 has been marked as a duplicate of this bug. ***
Comment 6 Bram Schoenmakers 2006-12-22 23:40:36 UTC
SVN commit 615849 by bram:

Do not use a static KOrg::AboutData, it makes KOrganizer behave funky (read: prepare to crash) when you embed it inside Konqueror.

I close both bugs regarding embedding Korg inside Konq, I was not able to reproduce both of them (before this patch I was able to)

BUG:130280
BUG:130290



 M  +0 -8      aboutdata.cpp  
 M  +0 -5      aboutdata.h  
 M  +1 -2      korganizer_part.cpp  


--- branches/KDE/3.5/kdepim/korganizer/aboutdata.cpp #615848:615849
@@ -28,8 +28,6 @@
 
 using namespace KOrg;
 
-AboutData *AboutData::mSelf = 0;
-
 AboutData::AboutData()
   : KAboutData( "korganizer", I18N_NOOP("KOrganizer"), korgVersion,
                 I18N_NOOP("A Personal Organizer for KDE"),
@@ -75,9 +73,3 @@
   addCredit("Thomas Zander");
   addCredit("Fester Zigterman");
 }
-
-AboutData *AboutData::self()
-{
-  if ( !mSelf ) mSelf = new AboutData;
-  return mSelf;
-}
--- branches/KDE/3.5/kdepim/korganizer/aboutdata.h #615848:615849
@@ -33,11 +33,6 @@
 {
   public:
     AboutData();
-    
-    static AboutData *self();
-    
-  private:
-    static AboutData *mSelf;
 };
 
 }
--- branches/KDE/3.5/kdepim/korganizer/korganizer_part.cpp #615848:615849
@@ -43,7 +43,6 @@
 #include <kpopupmenu.h>
 #include <kinstance.h>
 #include <klocale.h>
-#include <kaboutdata.h>
 #include <kiconloader.h>
 #include <kaction.h>
 #include <kdebug.h>
@@ -140,7 +139,7 @@
 
 KAboutData *KOrganizerPart::createAboutData()
 {
-  return KOrg::AboutData::self();
+  return new KOrg::AboutData;
 }
 
 void KOrganizerPart::startCompleted( KProcess *process )