Do not use a static KOrg::AboutData, it makes KOrganizer behave funky (read: prepare to crash) when you embed it inside Konqueror.

I close both bugs regarding embedding Korg inside Konq, I was not able to reproduce both of them (before this patch I was able to)

BUG:130280
BUG:130290


svn path=/branches/KDE/3.5/kdepim/; revision=615849